# note-for-note

./: .gitignore  LICENSE  README.md
.claude/hooks/: session-start.sh
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  _music21.py  audio.py  main.py  notation.py  schemas.py  transcription.py
backend/tests/: conftest.py  helpers.py  test_api.py  test_audio.py  test_pipeline.py
frontend/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  export.ts  html-midi-player.d.ts  index.css  vite-env.d.ts
frontend/src/audio/: wav.ts
frontend/src/components/: AudioInput.tsx  ErrorBoundary.tsx  MidiPlayer.tsx  NotationControls.test.tsx  NotationControls.tsx  SheetMusic.tsx
frontend/src/lib/: download.ts
