[project]
name = "note-for-note-backend"
version = "0.1.0"
description = "Piano audio to sheet music transcription API"
readme = "README.md"
# basic-pitch supports Python 3.7-3.11 (not 3.12), so pin to the 3.11 series.
requires-python = ">=3.11,<3.12"
dependencies = [
    # setuptools<81 keeps pkg_resources, which resampy (a basic-pitch dependency)
    # imports at runtime; it was removed from setuptools in v81.
    "setuptools<81",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "basic-pitch>=0.4.0",
    "music21>=9.1",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.24",
    "pretty-midi>=0.2.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
# This is an application, not a distributable library: don't try to build/install
# the project itself, just manage its dependencies in the environment.
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
